# arca

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
arca/: __init__.py
test/: test_dataclasses.py  test_serialization.py  test_version.py
