[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arca"
authors = [
    {name = "Albert Klinkovský", email = "albert.klinkovsky@gmail.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]


[tool.setuptools.dynamic]
version = {attr = "arca.__version__"}

[tool.setuptools.packages.find]
include = ["arca", "arca*"]


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
